--- a/Try Resnet in recognition/Resnet in Pytorch.ipynb
+++ b/Try Resnet in recognition/Resnet in Pytorch.ipynb
@@ -32,9 +32,9 @@
     "     transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225))])\n",
     "\n",
     "trainset = torchvision.datasets.ImageFolder\\\n",
-    "(root=\"C:\\\\Users\\\\Charl\\\\Desktop\\\\ELEC5307\\\\Assignment II\\\\train\\\\\", transform=train_transform)\n",
+    "(root=\"C:\\\\Users\\\\Charl\\\\Desktop\\\\ELEC5620\\\\Dog&Cat\\\\train\\\\\", transform=train_transform)\n",
     "valset = torchvision.datasets.ImageFolder\\\n",
-    "(root=\"C:\\\\Users\\\\Charl\\\\Desktop\\\\ELEC5307\\\\Assignment II\\\\val\\\\\", transform=test_transform)"
+    "(root=\"C:\\\\Users\\\\Charl\\\\Desktop\\\\ELEC5620\\\\Dog&Cat\\\\val\\\\\", transform=test_transform)"
    ]
   },
   {
@@ -61,9 +61,9 @@
     "     transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225))])\n",
     "\n",
     "trainset = torchvision.datasets.ImageFolder\\\n",
-    "(root=\"C:\\\\Users\\\\Charl\\\\Desktop\\\\ELEC5307\\\\Assignment II\\\\train\\\\\", transform=train_transform)\n",
+    "(root=\"C:\\\\Users\\\\Charl\\\\Desktop\\\\ELEC5620\\\\Dog&Cat\\\\train\\\\\", transform=train_transform)\n",
     "valset = torchvision.datasets.ImageFolder\\\n",
-    "(root=\"C:\\\\Users\\\\Charl\\\\Desktop\\\\ELEC5307\\\\Assignment II\\\\val\\\\\", transform=test_transform)"
+    "(root=\"C:\\\\Users\\\\Charl\\\\Desktop\\\\ELEC5620\\\\Dog&Cat\\\\val\\\\\", transform=test_transform)"
    ]
   },
   {
@@ -74,9 +74,9 @@
    },
    "outputs": [],
    "source": [
-    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=2,\n",
+    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=32,\n",
     "                                          shuffle=False, num_workers=2)\n",
-    "valloader = torch.utils.data.DataLoader(valset, batch_size=2,\n",
+    "valloader = torch.utils.data.DataLoader(valset, batch_size=32,\n",
     "                                         shuffle=False, num_workers=2)"
    ]
   },
@@ -113,9 +113,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=2,\n",
+    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=32,\n",
     "                                          shuffle=False, num_workers=2)\n",
-    "valloader = torch.utils.data.DataLoader(valset, batch_size=2,\n",
+    "valloader = torch.utils.data.DataLoader(valset, batch_size=32,\n",
     "                                         shuffle=False, num_workers=2)"
    ]
   },
